<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rvsoftlab.kanoon.LoginActivity"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_log_in"
                android:fontFamily="@font/regular_xml"
                android:textStyle="bold"
                android:background="@color/colorAccent"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"
                android:letterSpacing="0.3"
                android:layout_gravity="bottom"
                android:id="@+id/btn_login"/>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hi,"
                    android:textColor="@color/colorBlack"
                    android:fontFamily="@font/nexa_bold"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:letterSpacing="0.2"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_request_message"
                    android:fontFamily="@font/thin_xml"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textSize="17sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="50dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/thin_xml"
                    android:text="@string/lbl_mobile_number"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_91"
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/thin_xml"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/thin_xml"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"
                        android:background="@android:color/transparent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:inputType="phone"
                        android:maxLength="10"/>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginEnd="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/lbl_are_you_new"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="@font/nexa_bold"
                    android:background="@android:color/transparent"
                    android:textStyle="bold"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>
